Fix: stylistic issues on iOS

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -21,3 +21,10 @@
 body {
   @apply font-inter bg-background text-foreground;
 }
+
+/* https://stackoverflow.com/questions/2989263/disable-auto-zoom-in-input-text-tag-safari-on-iphone */
+@supports (-webkit-overflow-scrolling: touch) {
+  input {
+    font-size: 16px;
+  }
+}
